added gulp-postcss,autoprefixer,postcss-simple-vars,postcss-nested and test with changes

--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -1,3 +1,12 @@
+$mycolor:#346787;
 *{
-    
+    margin: 0;
+}
+
+html{
+    columns: 80px;
+    background-color: $mycolor;
+    h1{
+        color: blue;
+    }
 }
