--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,5 +1,9 @@
 .large-hero{
+    border-bottom: 10px solid $c-primary;
     position: relative;
+    &__image{
+        display: block;
+    }        
     &__text-content{
         position: absolute;
         top: 50%;
@@ -11,25 +15,38 @@
     &__title{
         font-weight: 300;
         color: $c-primary;
-        font-size: 4.8rem;
+        font-size: 2.4rem;
         margin: 0;
+
+        @mixin atSmall{
+            font-size: 4.8rem;
+        }
     }
     
     &__subtitle{
         font-weight: 300;
         color: $c-primary;
-        font-size: 2.9rem;
-        margin: 0;    
+        font-size: 1.5rem;
+        margin: 0;
+        
+        @mixin atSmall{
+            font-size: 2.9rem;
+        }
     }
     &__discription{
         font-weight: 200;
         color: #fff;
-        font-size: 1.875rem;
+        font-size: 1.1rem;
         text-shadow: 2px 2px 0 rgba(0,0, 0, .1);
         max-width: 30rem;
         margin-left: auto;
         margin-right: auto;
-    }    
+
+        @mixin atSmall{
+            font-size: 1.875rem;
+        }
+    }
+
 }
 
 
