--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -459,9 +459,26 @@ img {
     height: auto;
 }
 
-.large-hero{
-    position: relative;    
+/* to clear float unwanted behaviour */
+
+.clear-fix{
+    clear: both;
 }
+
+*{
+    -webkit-box-sizing :border-box;
+            box-sizing :border-box;
+}
+
+.large-hero{
+    border-bottom: 10px solid #2f5572;
+    position: relative;
+
+}
+
+.large-hero__image{
+        display: block;
+    }
 
 .large-hero__text-content{
         position: absolute;
@@ -476,25 +493,46 @@ img {
 .large-hero__title{
         font-weight: 300;
         color: #2f5572;
-        font-size: 4.8rem;
+        font-size: 2.4rem;
         margin: 0;
+    }
+
+@media(min-width: 530px) {
+
+.large-hero__title{
+            font-size: 4.8rem
+    }
     }
 
 .large-hero__subtitle{
         font-weight: 300;
         color: #2f5572;
-        font-size: 2.9rem;
-        margin: 0;    
+        font-size: 1.5rem;
+        margin: 0;
+    }
+
+@media(min-width: 530px) {
+
+.large-hero__subtitle{
+            font-size: 2.9rem
+    }
     }
 
 .large-hero__discription{
         font-weight: 200;
         color: #fff;
-        font-size: 1.875rem;
+        font-size: 1.1rem;
         text-shadow: 2px 2px 0 rgba(0,0, 0, .1);
         max-width: 30rem;
         margin-left: auto;
         margin-right: auto;
+    }
+
+@media(min-width: 530px) {
+
+.large-hero__discription{
+            font-size: 1.875rem
+    }
     }
 
 .btn{
@@ -511,6 +549,149 @@ img {
     }
 
 .btn--large{
-        font-size: 1.25rem;
         padding: 1.1rem 1.9rem;
+    }
+
+@media(min-width: 530px) {
+
+.btn--large{
+            font-size: 1.25rem
+    }
+    }
+
+.wrapper{
+    padding-left: 18px;
+    padding-right: 18px;
+    max-width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
+    overflow: hidden;
+}
+
+.wrapper--medium{
+        max-width: 976px;
+    }
+
+.wrapper .wrapper{
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+.wrapper--b-margin{
+        margin-bottom: 1rem;
+    }
+
+@media(min-width: 530px) {
+
+.wrapper--b-margin{
+            margin-bottom: 3.875rem
+    }
+    }
+
+.page-section{
+    padding: 1.2rem 0;
+}
+
+@media(min-width: 800px) {
+
+.page-section{
+        padding: 4.5rem 0
+}
+    }
+
+.page-section--blue{
+        background-color: #2f5572;
+        color: #fff;
+    }
+
+.headline{
+    font-weight: 300;
+    font-size: 1.9rem;
+
+    color: #2f5572;
+}
+
+@media(min-width: 530px) {
+
+.headline{
+        font-size: 2.875rem
+}
+    }
+
+.headline--center{
+        text-align: center;
+    }
+
+.headline--orange{
+        color: rgb(255, 192, 75);
+    }
+
+.headline--small{
+        font-size: 1.2rem;
+    }
+
+@media(min-width: 530px) {
+
+.headline--small{
+            font-size: 1.875rem
+    }
+    }
+
+.headline--narrow{
+        max-width: 500px;
+        margin-right: auto;
+        margin-left:auto ;
+    }
+
+.headline--light{
+        font-weight: 200;
+    }
+
+.headline--b-margin-small{
+        margin-bottom: 0.5em;
+    }
+
+.headline--b-margin-large{
+        margin-bottom: 1.6em;
+    }
+
+.headline--no-t-margin{
+        margin-top: 0;
+    }
+
+@media(min-width: 800px) {
+        .row__4-of-12{
+            float: left;
+            width: 33.33%;
+        }
+        .row__8-of-12{
+            float: left;
+            width: 66.66%;
+        }
+        .row__4-of-12--larger{
+            width: 37%;
+        }
+        .row__8-of-12--small{
+            float: left; 
+            width: 63%;
+        }
+    }
+
+.row::after {
+        clear: both;
+        content: "";
+        display: table;
+    }
+
+.row--gutters {
+        margin-right: -65px;
+    }
+
+.row--gutters > div {
+            padding-right: 65px;
+        }
+
+.generic-content-container p{
+        line-height: 1.65;
+        font-size:1.125rem;
     }
