--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -1,5 +1,5 @@
 @import "normalize.css";
-@import "base/_variables";
+@import "base/_variables":
 @import "base/_global";
 @import "base/_mixins";
 @import "modules/_large-hero";
