--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -2,10 +2,10 @@
 
     p{
         line-height: 1.65;
-        margin :1.8rem 0;
+        margin :0 0 1.8rem 0;
 
         @mixin atSmall{
-            font-size:1.125rem:
+            font-size:1.125rem;
         }
     }
     p a{
