--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -7,7 +7,11 @@
         &__b-margin-until-medium{
             margin-bottom: 0;
         }
-    
+
+        &__6-of-12{
+            float: left;
+            width: 50%;
+        }
         &__4-of-12{
             float: left;
             width: 33.33%;
@@ -25,10 +29,17 @@
         }            
     }
     @mixin clear-fix-me;
+
     &--gutters {
         margin-right: -65px;
         & > div {
             padding-right: 65px;
+        }
+        &-large{
+            margin-right: -100px;
+            & > div{
+                padding-right: 100px;
+            }
         }
     }
 }
