--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -1,5 +1,5 @@
 @import "normalize.css";
-@import "base/_variables":
+@import "base/_variables";
 @import "base/_global";
 @import "base/_mixins";
 @import "modules/_large-hero";
@@ -9,4 +9,4 @@
 @import "modules/_headline";
 @import "modules/_row";
 @import "modules/_generic-content-container";
-@import "modules/_section-title"
+@import "modules/_features";
