--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -8,4 +8,15 @@
         background-color: $c-primary;
         color: #fff;
     }
+
+    &--no-bottom-padding{
+        padding-bottom: 0;
+    }
+    &--testimonials{
+        background-color: #e0e6ef;
+        @mixin atMedium{
+            background: url('../assets/images/testimonials-bg.jpg') top center no-repeat;
+            background-size: cover;    
+        }
+    }
 }
