--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -18,4 +18,12 @@
             margin-bottom: 3.875rem;
         }
     }
+    &--no-padding-until-4-of-12{
+        padding-left: 0;
+        padding-right: 0;
+        @mixin atMedium{
+            padding-left: 18px;
+            padding-right: 18px;        
+        }
+    }
 }
