--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -10,3 +10,4 @@
 @import "modules/_row";
 @import "modules/_generic-content-container";
 @import "modules/_features";
+@import "modules/_testimonials";
