Completeing styling footer section.

--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -11,3 +11,4 @@
 @import "modules/_generic-content-container";
 @import "modules/_features";
 @import "modules/_testimonials";
+@import "modules/_footer";
