--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -924,3 +924,25 @@ a{
 .testimonials--last{
         margin-bottom: 0;
     }
+
+.footer{
+    background-color: #2f5572;
+    color: #fff;
+    padding: .5rem 0;
+    text-align: center;
+}
+
+.footer__text{
+        display: block;
+        margin-bottom: 1rem;
+        font-weight: 200;
+    }
+
+@media(min-width: 800px) {
+
+.footer__text{
+            display: inline;
+            margin-bottom: 0;
+            margin-right: 1.4rem
+    }
+    }
