Completeing styling header for large screen

--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -12,3 +12,5 @@
 @import "modules/_features";
 @import "modules/_testimonials";
 @import "modules/_footer";
+@import "modules/_header";
+@import "modules/_primary-nav";
