--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -2,8 +2,11 @@
     width: 100%;
     position: absolute;
     z-index: 2;
-    background-color: rgba($c-primary,.3);
     padding: 10px 0;
+
+    @mixin atMedium{
+        background-color: rgba($c-primary,.3);
+    }
     &__btn-container{
         float: right;
     }
@@ -12,5 +15,30 @@
         top:0;
         background-color: $c-primary;
         padding: 25px 36px;
+        left: 50%;
+        transform:translateX(-50%) scale(.8);
+        transform-origin: 50% 0;
+        @mixin atMedium{
+            left: auto;
+            transform:translateX(0);
+                
+        }
+    }
+    &__menu-content{
+        display: none;
+        @mixin atMedium{
+            display: block; 
+        }
+    }
+    &__menu-icon{
+        width: 20px;
+        height: 20px;
+        background-color: #fff;
+        position: absolute;
+        top:10px;
+        right: 10px;
+        @mixin atMedium{
+            display: none;
+        }
     }
 }
