--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -485,6 +485,7 @@ a{
     }
 
 .large-hero__text-content{
+        padding-top: 88px;
         position: absolute;
         top: 50%;
         left: 0;
@@ -492,6 +493,13 @@ a{
         -webkit-transform:  translateY(-50%);
                 transform:  translateY(-50%);
         text-align: center;
+    }
+
+@media(min-width: 800px) {
+
+.large-hero__text-content{
+            padding-top: 60px
+    }
     }
 
 .large-hero__title{
@@ -951,9 +959,15 @@ a{
     width: 100%;
     position: absolute;
     z-index: 2;
-    background-color: rgba(47,85,114,.3);
     padding: 10px 0;
 }
+
+@media(min-width: 800px) {
+
+.header{
+        background-color: rgba(47,85,114,.3)
+}
+    }
 
 .header__btn-container{
         float: right;
@@ -964,6 +978,47 @@ a{
         top:0;
         background-color: #2f5572;
         padding: 25px 36px;
+        left: 50%;
+        -webkit-transform:translateX(-50%) scale(.8);
+                transform:translateX(-50%) scale(.8);
+        -webkit-transform-origin: 50% 0;
+                transform-origin: 50% 0;
+    }
+
+@media(min-width: 800px) {
+
+.header__logo{
+            left: auto;
+            -webkit-transform:translateX(0);
+                    transform:translateX(0)
+    }
+    }
+
+.header__menu-content{
+        display: none;
+    }
+
+@media(min-width: 800px) {
+
+.header__menu-content{
+            display: block
+    }
+    }
+
+.header__menu-icon{
+        width: 20px;
+        height: 20px;
+        background-color: #fff;
+        position: absolute;
+        top:10px;
+        right: 10px;
+    }
+
+@media(min-width: 800px) {
+
+.header__menu-icon{
+            display: none
+    }
     }
 
 .primary-nav--pull-right{
