--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -1,43 +1,76 @@
-.header{
+.header {
     width: 100%;
     position: absolute;
     z-index: 2;
     padding: 10px 0;
+    transition: background-color .3s ease-out;
 
-    @mixin atMedium{
-        background-color: rgba($c-primary,.3);
+    &--is-expanded {
+        background-color: rgba($c-primary, .75);
     }
-    &__btn-container{
-        float: right;
+
+    @mixin atMedium {
+        background-color: rgba($c-primary, .3);
     }
-    &__logo{
+
+    &__btn-container {
+        @mixin atMedium {
+            float: right;
+        }
+    }
+
+    &__logo {
         position: absolute;
-        top:0;
+        top: 0;
         background-color: $c-primary;
         padding: 25px 36px;
         left: 50%;
-        transform:translateX(-50%) scale(.8);
+        transform: translateX(-50%) scale(.8);
         transform-origin: 50% 0;
-        @mixin atMedium{
+
+        @mixin atMedium {
             left: auto;
-            transform:translateX(0);
-                
+            transform: translateX(0);
+
         }
     }
-    &__menu-content{
-        display: none;
-        @mixin atMedium{
-            display: block; 
+
+    &__menu-content {
+        /*display: none; */
+        transform:  scale(1.2);
+        padding-top: 80px;
+        text-align: center;
+        opacity: 0;
+        position: relative;
+        z-index: -10;
+        transition: all .3s ease-out; 
+
+        @mixin atMedium {
+            display: block;
+            padding-top: 0;
+            opacity: 1;
+            z-index: 1;
+            transform:scale(1);
+        }
+
+        &--is-visible {
+            /* display: block; */
+            opacity: 1;
+            z-index: 1;
+            transform: scale(1);
         }
     }
-    &__menu-icon{
+
+    &__menu-icon {
         width: 20px;
         height: 20px;
         background-color: #fff;
         position: absolute;
-        top:10px;
+        z-index: 10;
+        top: 10px;
         right: 10px;
-        @mixin atMedium{
+
+        @mixin atMedium {
             display: none;
         }
     }
