--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,8 +1,14 @@
 .primary-nav{
+    padding-top: 10px;
     
+    @mixin atMedium{
+        padding-top: 0;
+    }
 
     &--pull-right{
-        float: right;
+        @mixin atMedium{
+            float: right;
+        }
     }
     ul {
         margin: 0;
@@ -11,13 +17,33 @@
     }
     li{
         list-style: none;
-        float: left;
-        padding-right: 20px;
+        display: inline-block;
+        padding-right: 7px;
         padding-top: 12px;
+        @mixin atMedium{
+            float: left;
+            display: block;
+            padding-right: 20px;
+        }
+        &:last-child{
+            padding-right: 0;
+            @mixin atMedium{
+                padding-right: 20px;
+            }
+        }
     }
     a{
         color: #fff;
         text-decoration: none;
         font-weight: 300;
+        padding: 5px 8px 8px 8px;
+        font-size: .8rem;
+        text-align: center;
+        background-color:rgba($c-primary,.5);
+        @mixin atMedium{
+            padding: 12px 0;
+            font-size: 1rem;
+            background-color: transparent;
+        }
     }
 }
