--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -955,74 +955,120 @@ a{
     }
     }
 
-.header{
+.header {
     width: 100%;
     position: absolute;
     z-index: 2;
     padding: 10px 0;
+    -webkit-transition: background-color .3s ease-out;
+    transition: background-color .3s ease-out;
 }
+
+.header--is-expanded {
+        background-color: rgba(47,85,114, .75);
+    }
 
 @media(min-width: 800px) {
 
-.header{
-        background-color: rgba(47,85,114,.3)
+.header {
+        background-color: rgba(47,85,114, .3)
 }
     }
 
-.header__btn-container{
-        float: right;
+@media(min-width: 800px) {
+
+.header__btn-container {
+            float: right
+    }
     }
 
-.header__logo{
+.header__logo {
         position: absolute;
-        top:0;
+        top: 0;
         background-color: #2f5572;
         padding: 25px 36px;
         left: 50%;
-        -webkit-transform:translateX(-50%) scale(.8);
-                transform:translateX(-50%) scale(.8);
+        -webkit-transform: translateX(-50%) scale(.8);
+                transform: translateX(-50%) scale(.8);
         -webkit-transform-origin: 50% 0;
                 transform-origin: 50% 0;
     }
 
 @media(min-width: 800px) {
 
-.header__logo{
+.header__logo {
             left: auto;
-            -webkit-transform:translateX(0);
-                    transform:translateX(0)
+            -webkit-transform: translateX(0);
+                    transform: translateX(0)
     }
     }
 
-.header__menu-content{
-        display: none;
+.header__menu-content {
+        /*display: none; */
+        -webkit-transform:  scale(1.2);
+                transform:  scale(1.2);
+        padding-top: 80px;
+        text-align: center;
+        opacity: 0;
+        position: relative;
+        z-index: -10;
+        -webkit-transition: all .3s ease-out;
+        transition: all .3s ease-out;
     }
 
 @media(min-width: 800px) {
 
-.header__menu-content{
-            display: block
+.header__menu-content {
+            display: block;
+            padding-top: 0;
+            opacity: 1;
+            z-index: 1;
+            -webkit-transform:scale(1);
+                    transform:scale(1)
     }
     }
 
-.header__menu-icon{
+.header__menu-content--is-visible {
+            /* display: block; */
+            opacity: 1;
+            z-index: 1;
+            -webkit-transform: scale(1);
+                    transform: scale(1);
+        }
+
+.header__menu-icon {
         width: 20px;
         height: 20px;
         background-color: #fff;
         position: absolute;
-        top:10px;
+        z-index: 10;
+        top: 10px;
         right: 10px;
     }
 
 @media(min-width: 800px) {
 
-.header__menu-icon{
+.header__menu-icon {
             display: none
     }
     }
 
+.primary-nav{
+    padding-top: 10px;
+}
+
+@media(min-width: 800px) {
+
+.primary-nav{
+        padding-top: 0
+}
+    }
+
+@media(min-width: 800px) {
+
 .primary-nav--pull-right{
-        float: right;
+            float: right
+    }
     }
 
 .primary-nav ul {
@@ -1038,13 +1084,46 @@ a{
 
 .primary-nav li{
         list-style: none;
-        float: left;
-        padding-right: 20px;
+        display: inline-block;
+        padding-right: 7px;
         padding-top: 12px;
+    }
+
+@media(min-width: 800px) {
+
+.primary-nav li{
+            float: left;
+            display: block;
+            padding-right: 20px
+    }
+    }
+
+.primary-nav li:last-child{
+            padding-right: 0;
+        }
+
+@media(min-width: 800px) {
+
+.primary-nav li:last-child{
+                padding-right: 20px
+        }
     }
 
 .primary-nav a{
         color: #fff;
         text-decoration: none;
         font-weight: 300;
+        padding: 5px 8px 8px 8px;
+        font-size: .8rem;
+        text-align: center;
+        background-color: rgba(47,85,114,.5);
+    }
+
+@media(min-width: 800px) {
+
+.primary-nav a{
+            padding: 12px 0;
+            font-size: 1rem;
+            background-color: transparent
+    }
     }
