added bottom border to feature section for small-screen

--- a/app/assets/styles/modules/_features.css
+++ b/app/assets/styles/modules/_features.css
@@ -24,6 +24,7 @@
         margin-bottom: .8rem;
         margin-top: .7em;
         text-align: center;
+        
         @mixin atSmall{
             margin-top: 1em;
             font-size: 1.875rem;
@@ -40,6 +41,16 @@
         font-weight: 300;
         text-align: center;
 
+        &-head{
+            border-bottom: 1px solid #fff;
+        }
+
+        @mixin atMedium{
+            &-head{
+                border-bottom: none;
+            }
+    
+        }
         strong {
             font-weight: 500;
         }
