--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1048,13 +1048,68 @@ a{
 
 .header__menu-icon {
         width: 20px;
-        height: 20px;
-        background-color: #fff;
+        height: 19px;
         position: absolute;
         z-index: 10;
         top: 10px;
         right: 10px;
     }
+
+.header__menu-icon__middle{
+            position: absolute;
+            width: 20px;
+            height: 3px;
+            background-color: #fff;
+            left: 0;
+            top:8px;
+            -webkit-transition:all .1s ease-out;
+            transition:all .1s ease-out;
+        }
+
+.header__menu-icon::before{
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 3px;
+            background-color: #fff;
+            left: 0;    
+            top:0;
+            -webkit-transition:-webkit-transform .3s ease-out;
+            transition:-webkit-transform .3s ease-out;
+            transition:transform .3s ease-out;
+            transition:transform .3s ease-out, -webkit-transform .3s ease-out;
+            
+        }
+
+.header__menu-icon::after{
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 3px;
+            background-color: #fff;
+            left: 0;    
+            bottom:0;
+            -webkit-transition:-webkit-transform .3s ease-out;
+            transition:-webkit-transform .3s ease-out;
+            transition:transform .3s ease-out;
+            transition:transform .3s ease-out, -webkit-transform .3s ease-out;
+        }
+
+.header__menu-icon--close-x .header__menu-icon__middle{
+                opacity: 0;
+                -webkit-transform:scale(0);
+                        transform:scale(0);
+            }
+
+.header__menu-icon--close-x::before{
+                -webkit-transform: translateY(8px) rotate(45deg);
+                        transform: translateY(8px) rotate(45deg);
+            }
+
+.header__menu-icon--close-x::after{
+                -webkit-transform: translateY(-8px) rotate(135deg);
+                        transform: translateY(-8px) rotate(135deg);
+            }
 
 @media(min-width: 800px) {
 
