Scroll:Waypoints added to feature section.

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1192,3 +1192,11 @@ a{
             background-color: transparent
     }
     }
+
+.reveal-item{
+    opacity: 0;
+}
+
+.reveal-item--is-visible{
+        opacity: 1;
+    }
