--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -981,8 +981,16 @@ a{
 @media(min-width: 800px) {
 
 .header {
-        background-color: rgba(47,85,114, .3)
+        background-color: rgba(47,85,114, .3);
+        position:fixed
 }
+    }
+
+@media(min-width: 800px) {
+
+.header--dark{
+            background-color: rgba(47,85,114, .9)
+    }
     }
 
 @media(min-width: 800px) {
@@ -998,6 +1006,10 @@ a{
         background-color: #2f5572;
         padding: 25px 36px;
         left: 50%;
+        -webkit-transition: -webkit-transform .3s ease-out;
+        transition: -webkit-transform .3s ease-out;
+        transition: transform .3s ease-out;
+        transition: transform .3s ease-out, -webkit-transform .3s ease-out;
         -webkit-transform: translateX(-50%) scale(.8);
                 transform: translateX(-50%) scale(.8);
         -webkit-transform-origin: 50% 0;
@@ -1011,6 +1023,10 @@ a{
             -webkit-transform: translateX(0);
                     transform: translateX(0)
     }
+            .header--dark .header__logo{
+                -webkit-transform :scale(.55);
+                        transform :scale(.55);
+            }
     }
 
 .header__menu-content {
