added model to 'Get in Touch' link

--- a/app/assets/styles/modules/_features.css
+++ b/app/assets/styles/modules/_features.css
@@ -41,6 +41,10 @@
         font-weight: 300;
         text-align: center;
 
+        &--less-margin{
+            margin-bottom: 1.3rem;
+        }
+
         &-head{
             border-bottom: 1px solid #fff;
         }
