--- a/app/assets/styles/style.css
+++ b/app/assets/styles/style.css
@@ -15,3 +15,5 @@
 @import "modules/_header";
 @import "modules/_primary-nav";
 @import "modules/_reveal-item";
+@import "modules/_model";
+@import "modules/_social-icons";
