--- a/app/assets/styles/modules/_social-icons.css
+++ b/app/assets/styles/modules/_social-icons.css
@@ -4,21 +4,21 @@
     &__icon{
         background-color: $c-org;
         display:inline-block;
-        margin: 0 5px 5px 5px;
+        margin: 0 5px 5px 0;
         padding: 5px;
         text-align: center;
-        width: 33%;
+        width: 23%;
         @mixin atMedium{
             width: 75px;
             margin: 0 5px;
         }      
 
         img{
-            height: 70px;
-            width: 70px;
+            height: 50px;
+            width: 50px;
             @mixin atMedium{
-                width: 50px;
-                height: 50px;
+                width: 70px;
+                height: 70px;
             }          
         }
     }
