--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -15,8 +15,10 @@
     &--testimonials{
         background-color: #e0e6ef;
         @mixin atMedium{
-            background: url('../assets/images/testimonials-bg.jpg') top center no-repeat;
-            background-size: cover;    
+            &.lazyloaded{
+                background: url('../assets/images/testimonials-bg.jpg') top center no-repeat;
+                background-size: cover;        
+            }
         }
     }
 }
